--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="container">
         <div class="menu-header">
             <div class="logo-name">
-                <img src="img/logo-header.png" alt="Логотип">
+                <img src="img/logo-header.svg" alt="За стеклом" width="100px" height="32px">
             </div>
             <nav class="nav-menu">
                 <a href="">О компании</a>
@@ -24,67 +24,134 @@
             </nav>
             <div class="button-tel">
                 <div class="button-tel__number"><a href="tel:+7 (831) 231-21-43">+7 (831) 231 21 43</a></div>
-                <div class="button-tel__call"><button class="bt">Заказать звонок</button></div>
+                <div class="button-tel__call"><button class="btn">Заказать звонок</button></div>
             </div>
         </div>
     </header>
     <main>
-        <section class="home">
-            <div class="container">
-                <div class="home-left">
-                    <h1 class="home-left__title">IT-услуги для вашего бизнеса - <span>просто, удобно, эффективно</span></h1>
-                    <p class="home-left__par">Мы готовы взорвать ваши продажи с помощью крутой CRM-системы!
-                        Наш индивидуальный подход, профессиональный анализ и мощные
-                        решения помогут вашему бизнесу достичь невиданных высот. </p>
-                    <div><button class="bt">Оставить заявку</button></div>
-                </div>
-                <div class="home-right">
-                    <img src="img/logo.png" alt="">
-                </div>
-            </div>
-        </section>
-        <section class="servizes">
-            <div class="container">
-                <div class="wr-title">
-                    <h2>Наши услуги</h2>
-                    <a class="link-disclosure" href="">Все услуги</a>
-                </div>
-                <div class="basic">
-                    <div class="basic-text">
-                        <h3 class="basic-text__title">Комплексная
-                            автоматизация</h3>
-                        <p class="basic-text__par">Наша команда готова уделять максимальное внимание вашим потребностям и предлагать наиболее оптимальные решения!</p>
-                        <button class="bt">Рассчитать стоимость</button>
+        <div class="container">
+            <section class="home">
+                    <div class="home-left">
+                        <h1 class="home-left__title">IT-услуги для вашего бизнеса - <span>просто, удобно, эффективно</span></h1>
+                        <p class="home-left__par">Мы готовы взорвать ваши продажи с помощью крутой CRM-системы!
+                            Наш индивидуальный подход, профессиональный анализ и мощные
+                            решения помогут вашему бизнесу достичь невиданных высот. </p>
+                        <div><button class="btn square">Оставить заявку</button></div>
                     </div>
-                    <div class="all-serv">
-                        <div class="card-serv">
-                            <a class="link-serv" href="">
-                                <h3 class="link-serv__title">CRM</h3>
-                                <p class="link-serv__text">Надежная CRM система способная объединить в себе самые эффективные инструменты коммуникации с вашими клиентами.</p>
-                            </a>
+                    <div class="home-right">
+                        <img src="img/logo.png" alt="">
+                        <img class="arrow"src="img/logo-1.png" alt="">
+                        <img class="screw" src="img/logo-2.png" alt="">
+                        <img class="screw-2" src="img/logo-2.png" alt="">
+                    </div>
+            </section>
+            <section class="servizes">
+                    <div class="wr-title">
+                        <h2>Наши услуги</h2>
+                        <a class="link-disc" href="">Все услуги</a>
+                    </div>
+                    <div class="basic">
+                        <div class="basic-text">
+                            <h3 class="basic-text__title">Комплексная
+                                автоматизация</h3>
+                            <p class="basic-text__par">Наша команда готова уделять максимальное внимание вашим потребностям и предлагать наиболее оптимальные решения!</p>
+                            <button class="btn square width">Рассчитать стоимость</button>
                         </div>
-                        <div class="card-serv">
-                            <a class="link-serv" href="">
-                                <h3 class="link-serv__title">1C</h3>
-                                <p class="link-serv__text">Вы можете получить помощь квалифицированных программистов 1С по всем вопросам работы программ 1С.</p>
-                            </a>
-                        </div>
-                        <div class="card-serv">
-                            <a class="link-serv" href="">
-                                <h3 class="link-serv__title">Сайты</h3>
-                                <p class="link-serv__text">IntoCRM разрабатывает сайты, адаптированные под ваши потребности.</p>
-                            </a>
-                        </div>
-                        <div class="card-serv">
-                            <a class="link-serv" href="">
-                                <h3 class="link-serv__title">Виджеты</h3>
-                                <p class="link-serv__text">Разрабатываем приложения для увеличения прибыли специально для вашей CRM-системы.</p>
-                            </a>
+                        <div class="all-serv">
+                            <div class="card card-serv">
+                                <a class="link-serv" href="">
+                                    <h3 class="link-serv__title">CRM</h3>
+                                    <p class="link-serv__text">Надежная CRM система способная объединить в себе самые эффективные инструменты коммуникации с вашими клиентами.</p>
+                                </a>
+                            </div>
+                            <div class="card card-serv">
+                                <a class="link-serv" href="">
+                                    <h3 class="link-serv__title">1C</h3>
+                                    <p class="link-serv__text">Вы можете получить помощь квалифицированных программистов 1С по всем вопросам работы программ 1С.</p>
+                                </a>
+                            </div>
+                            <div class="card card-serv">
+                                <a class="link-serv" href="">
+                                    <h3 class="link-serv__title">Сайты</h3>
+                                    <p class="link-serv__text">IntoCRM разрабатывает сайты, адаптированные под ваши потребности.</p>
+                                </a>
+                            </div>
+                            <div class="card card-serv">
+                                <a class="link-serv" href="">
+                                    <h3 class="link-serv__title">Виджеты</h3>
+                                    <p class="link-serv__text">Разрабатываем приложения для увеличения прибыли специально для вашей CRM-системы.</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
+            </section>
+        </div>
+        <div class="dark">
+            <div class="container">
+                <section class="licenses">
+                    <h2>Приобретайте лицензии для вашего
+                        бизнеса на выгодных условиях</h2>
+                    <div class="all-card">
+                        <div class="card all-card-lic">
+                            <div class="card-text">
+                                <p class="card-text__lic">Лицензия</p>
+                                <p class="card-text__name">1С:Битрикс</p>
+                            </div>
+                            <img src="img/1c.png">
+                        </div>
+                        <div class="card all-card-lic">
+                            <div class="card-text">
+                                <p class="card-text__lic">Лицензия</p>
+                                <p class="card-text__name">Битрикс 24</p>
+                            </div>
+                            <img src="img/bitrix.png">
+                        </div>
+                        <div class=" card all-card-lic">
+                            <div class="card-text">
+                                <p class="card-text__lic">Лицензия</p>
+                                <p class="card-text__name">amoCRM</p>
+                            </div>
+                            <img src="img/amocrm.png">
+                        </div>
+                    </div>
+                    <h2>Оптимизируем работу отдела продаж,
+                        чтобы достичь максимальной выручки
+                        при минимальных усилиях</h2>
+                    <div class="stages">
+                        <div class="card card-st">
+                            <h3 class="card-st__title">Разрабатываем план 
+                                внедрения</h3>
+                            <p class="card-st__text">Определим задачи amoCRM
+                                и создадим план для достижени
+                                целей, учитывая особенности
+                                вашего бизнеса.</p>
+                            <p class="card-st__result">Результат:</p>
+                            <p class="card-st__desc">Согласованное понимание
+                                задачи.</p>
+                        </div>
+                        <div class="card card-st">
+                            <h3 class="card-st__title">Проведем комплексный
+                                анализ</h3>
+                            <p class="card-st__text">Что будем смотреть: продукт,
+                                клиентов, компанию,
+                                отдел продаж.</p>
+                            <p class="card-st__result">Результат:</p>
+                            <p class="card-st__desc">Составим план развития вашей CRM.</p>
+                        </div>
+                        <div class="card card-st">
+                            <h3 class="card-st__title">Настроим CRM</h3>
+                            <p class="card-st__text">Полный перенос работы в CRM:
+                                подбор лицензий, добавлени
+                                сотрудников, настройка права,
+                                создание полей, воронок
+                                продаж.</p>
+                            <p class="card-st__result">Результат:</p>
+                            <p class="card-st__desc">Менеджеры могут вести
+                                клиентов по воронке.</p>
+                        </div>
+                    </div>
+                </section>
             </div>
-        </section>
-
+        </div>
     </main>
 </body>
