--- a/index.html
+++ b/index.html
@@ -155,15 +155,18 @@
         </div>
         <section class="form-crm">
             <div class="container">
-                <h2>Запишись на бесплатный урок
-                    по работе в CRM</h2>
-                <p>Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
-                <div class="wr-form">
-                    <form>
-                        <input class="form-button__line" type="tel" name="phone" placeholder="Ваш номер телефона">
-                        <input class="form-button__button" type="submit" value="Оставить заявку">
-                    </form>
+                <div class="inf">
+                    <h2>Запишись на бесплатный урок
+                        по работе в CRM</h2>
+                    <p class="inf__pr">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
+                    <div class="wr-form">
+                        <form>
+                            <input class="form-button__line" type="tel" name="phone" placeholder="Ваш номер телефона">
+                            <input class="form-button__button" type="submit" value="Оставить заявку">
+                        </form>
+                    </div>
                 </div>
+                <img class="foto">
             </div>
         </section>
     </main>
