--- a/index.html
+++ b/index.html
@@ -58,30 +58,22 @@
                             <button class="btn square width">Рассчитать стоимость</button>
                         </div>
                         <div class="all-serv">
-                            <div class="card card-serv">
-                                <a class="link-serv" href="">
-                                    <h3 class="link-serv__title">CRM</h3>
-                                    <p class="link-serv__text">Надежная CRM система способная объединить в себе самые эффективные инструменты коммуникации с вашими клиентами.</p>
-                                </a>
-                            </div>
-                            <div class="card card-serv">
-                                <a class="link-serv" href="">
-                                    <h3 class="link-serv__title">1C</h3>
-                                    <p class="link-serv__text">Вы можете получить помощь квалифицированных программистов 1С по всем вопросам работы программ 1С.</p>
-                                </a>
-                            </div>
-                            <div class="card card-serv">
-                                <a class="link-serv" href="">
-                                    <h3 class="link-serv__title">Сайты</h3>
-                                    <p class="link-serv__text">IntoCRM разрабатывает сайты, адаптированные под ваши потребности.</p>
-                                </a>
-                            </div>
-                            <div class="card card-serv">
-                                <a class="link-serv" href="">
-                                    <h3 class="link-serv__title">Виджеты</h3>
-                                    <p class="link-serv__text">Разрабатываем приложения для увеличения прибыли специально для вашей CRM-системы.</p>
-                                </a>
-                            </div>
+                            <a class="card link-serv" href="">
+                                <h3 class="link-serv__title">CRM</h3>
+                                <p class="link-serv__text">Надежная CRM система способная объединить в себе самые эффективные инструменты коммуникации с вашими клиентами.</p>
+                            </a>
+                            <a class="card link-serv" href="">
+                                <h3 class="link-serv__title">1C</h3>
+                                <p class="link-serv__text">Вы можете получить помощь квалифицированных программистов 1С по всем вопросам работы программ 1С.</p>
+                            </a>
+                            <a class="card link-serv" href="">
+                                <h3 class="link-serv__title">Сайты</h3>
+                                <p class="link-serv__text">IntoCRM разрабатывает сайты, адаптированные под ваши потребности.</p>
+                            </a>  
+                            <a class="card link-serv" href="">
+                                <h3 class="link-serv__title">Виджеты</h3>
+                                <p class="link-serv__text">Разрабатываем приложения для увеличения прибыли специально для вашей CRM-системы.</p>
+                            </a>
                         </div>
                     </div>
             </section>
@@ -114,6 +106,8 @@
                             <img src="img/amocrm.png">
                         </div>
                     </div>
+                </section>
+                <section class="stages-sec">
                     <h2>Оптимизируем работу отдела продаж,
                         чтобы достичь максимальной выручки
                         при минимальных усилиях</h2>
@@ -160,13 +154,15 @@
                         по работе в CRM</h2>
                     <p class="inf__pr">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
                     <div class="wr-form">
-                        <form>
-                            <input class="form-button__line" type="tel" name="phone" placeholder="Ваш номер телефона">
-                            <input class="form-button__button" type="submit" value="Оставить заявку">
+                        <form class="form-bt">
+                            <input class="form-bt__line" type="tel" name="phone" placeholder="Ваш номер телефона">
+                            <input class="form-bt__button" type="submit" value="Оставить заявку">
                         </form>
                     </div>
                 </div>
-                <img class="foto">
+                <div class="foto">
+                    <img src="img/alex.jpg" alt="Alex">
+                </div>
             </div>
         </section>
     </main>
