--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             </div>
                             <img src="img/bitrix.png">
                         </div>
-                        <div class=" card all-card-lic">
+                        <div class="card all-card-lic">
                             <div class="card-text">
                                 <p class="card-text__lic">Лицензия</p>
                                 <p class="card-text__name">amoCRM</p>
@@ -148,7 +148,7 @@
             </div>
         </div>
         <section class="form-crm">
-            <div class="container">
+            <div class="wr-form-crm container">
                 <div class="inf">
                     <h2>Запишись на бесплатный урок
                         по работе в CRM</h2>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="foto">
-                    <img src="img/alex.jpg" alt="Alex">
+                    <img src="img/alexk.jpg" alt="Alex">
                 </div>
             </div>
         </section>
