--- a/index.html
+++ b/index.html
@@ -165,5 +165,32 @@
                 </div>
             </div>
         </section>
+        <div class="container">
+            <section class="advantages">
+                <div class="adv-text">
+                    <h2>Наши преимущества</h2>
+                    <p class="adv-text__par">Наша команда готова уделять максимальное внимание вашим потребностям, предлагать наиболее оптимальные решения и строить отношения на взаимном доверии и долгосрочном партнерстве.</p>
+                </div>
+                <div class="number-adv">
+                    <div class="card-adv">
+                        <span>+220</span>
+                        <p class="card-adv__par">Довольных клиентов</p>
+                    </div>
+                    <div class="card-adv">
+                        <span>67%</span>
+                        <p class="card-adv__par">Довольных клиентов</p>
+                    </div>
+                    <div class="card-adv">
+                        <span>25%</span>
+                        <p class="card-adv__par">Увеличения прибыли</p>
+                    </div>
+                    <div class="card-adv">
+                        <span>х3</span>
+                        <p class="card-adv__par">Компания растет
+                            ежегодно</p>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
 </body>
