--- a/index.html
+++ b/index.html
@@ -113,58 +113,70 @@
                         при минимальных усилиях</h2>
                     <div class="stages">
                         <div class="card card-st">
-                            <h3 class="card-st__title">Разрабатываем план 
-                                внедрения</h3>
-                            <p class="card-st__text">Определим задачи amoCRM
-                                и создадим план для достижени
-                                целей, учитывая особенности
-                                вашего бизнеса.</p>
-                            <p class="card-st__result">Результат:</p>
-                            <p class="card-st__desc">Согласованное понимание
-                                задачи.</p>
+                            <div class="card-top">
+                                <h3 class="card-top__title">Разрабатываем план 
+                                    внедрения</h3>
+                                <p class="card-top__text">Определим задачи amoCRM
+                                    и создадим план для достижени
+                                    целей, учитывая особенности
+                                    вашего бизнеса.</p>
+                            </div>
+                            <div class="card-bot">
+                                <p class="card-bot__result">Результат:</p>
+                                <p class="card-bot__desc">Согласованное понимание
+                                    задачи.</p>
+                            </div>
                         </div>
                         <div class="card card-st">
-                            <h3 class="card-st__title">Проведем комплексный
-                                анализ</h3>
-                            <p class="card-st__text">Что будем смотреть: продукт,
-                                клиентов, компанию,
-                                отдел продаж.</p>
-                            <p class="card-st__result">Результат:</p>
-                            <p class="card-st__desc">Составим план развития вашей CRM.</p>
+                            <div class="card-top">
+                                <h3 class="card-top__title">Проведем комплексный
+                                    анализ</h3>
+                                <p class="card-top__text">Что будем смотреть: продукт,
+                                    клиентов, компанию,
+                                    отдел продаж.</p>
+                            </div>
+                            <div class="card-bot">
+                                <p class="card-bot__result">Результат:</p>
+                                <p class="card-bot__desc">Составим план развития вашей CRM.</p>
+                            </div>
                         </div>
                         <div class="card card-st">
-                            <h3 class="card-st__title">Настроим CRM</h3>
-                            <p class="card-st__text">Полный перенос работы в CRM:
-                                подбор лицензий, добавлени
-                                сотрудников, настройка права,
-                                создание полей, воронок
-                                продаж.</p>
-                            <p class="card-st__result">Результат:</p>
-                            <p class="card-st__desc">Менеджеры могут вести
-                                клиентов по воронке.</p>
+                            <div class="card-top">
+                                <h3 class="card-top__title">Настроим CRM</h3>
+                                <p class="card-top__text">Полный перенос работы в CRM:
+                                    подбор лицензий, добавлени
+                                    сотрудников, настройка права,
+                                    создание полей, воронок
+                                    продаж.</p>
+                            </div>
+                            <div class="card-bot">
+                                <p class="card-bot__result">Результат:</p>
+                                <p class="card-bot__desc">Менеджеры могут вести
+                                    клиентов по воронке.</p>
+                            </div>
                         </div>
                     </div>
                 </section>
             </div>
-        </div>
-        <section class="form-crm">
-            <div class="wr-form-crm container">
-                <div class="inf">
-                    <h2>Запишись на бесплатный урок
-                        по работе в CRM</h2>
-                    <p class="inf__pr">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
-                    <div class="wr-form">
-                        <form class="form-bt">
-                            <input class="form-bt__line" type="tel" name="phone" placeholder="Ваш номер телефона">
-                            <input class="form-bt__button" type="submit" value="Оставить заявку">
-                        </form>
+            <section class="form-crm">
+                <div class="wr-form-crm container">
+                    <div class="inf">
+                        <h2>Запишись на бесплатный урок
+                            по работе в CRM</h2>
+                        <p class="inf__pr">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
+                        <div class="wr-form">
+                            <form class="form-bt">
+                                <input class="form-bt__line" type="tel" name="phone" placeholder="Ваш номер телефона">
+                                <input class="form-bt__button" type="submit" value="Оставить заявку">
+                            </form>
+                        </div>
+                    </div>
+                    <div class="foto">
+                        <img src="img/alexk.jpg" alt="Alex">
                     </div>
                 </div>
-                <div class="foto">
-                    <img src="img/alexk.jpg" alt="Alex">
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
         <div class="container">
             <section class="advantages">
                 <div class="adv-text">
@@ -190,6 +202,95 @@
                             ежегодно</p>
                     </div>
                 </div>
+            </section>
+        </div>
+            <section class="cases">
+                <div class="container">
+                    <div class="wr-title">
+                        <h2>Наши кейсы</h2>
+                        <a class="link-disc" href="">Все кейсы</a>
+                    </div>
+                    <div class="all-cases">
+                        <div class="cases-card">
+                            <div class="wr-cases">
+                                <h3>ЦНМ</h3>
+                                <div class="wr-cases__result">
+                                    <p>Описание результата</p>
+                                </div>
+                            </div>
+                            <div class="cases-card__btn">
+                                <button class="btn">Подробнее</button>
+                            </div>
+                        </div>
+                        <div class="cases-card">
+                            <div class="wr-cases">
+                                <h3>Мосроллета</h3>
+                                <div class="wr-cases__result">
+                                    <p>Описание результата</p>
+                                </div>
+                            </div>
+                            <div class="cases-card__btn">
+                                <button class="btn">Подробнее</button>
+                            </div>
+                        </div>
+                        <div class="cases-card">
+                            <div class="wr-cases">
+                                <h3>Geometrium</h3>
+                                <div class="wr-cases__result">
+                                    <p>Описание результата</p>
+                                </div>
+                            </div>
+                            <div class="cases-card__btn">
+                                <button class="btn">Подробнее</button>
+                            </div>
+                        </div>
+                        <div class="cases-card">
+                            <div class="wr-cases">
+                                <h3>Губерния online</h3>
+                                <div class="wr-cases__result">
+                                    <p>Описание результата</p>
+                                </div>
+                            </div>
+                            <div class="cases-card__btn">
+                                <button class="btn">Подробнее</button>
+                            </div>
+                        </div>
+                        <div class="cases-card">
+                            <div class="wr-cases">
+                                <h3>Энергопилот</h3>
+                                <div class="wr-cases__result">
+                                    <p>Описание результата</p>
+                                </div>
+                            </div>
+                            <div class="cases-card__btn">
+                                <button class="btn">Подробнее</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        <div class="container">
+            <section class="reviews">
+                <div class="wr-title">
+                    <h2>Наши отзывы</h2>
+                    <a class="link-disc" href="">Все отзывы</a>
+                </div>
+                <div class="card-basic">
+                    <div class="wrcard-rev">
+                        <div class="card-rev">
+                            <div class="card-rev__picture">
+                                <img src="img/foto.jpg">
+                            </div>
+                            <div class="card-rev__text">
+                                <h3>Интернет решения</h3>
+                                <p>Российская IT-компания,
+                                    основанная в 2015 году.</p>
+                            </div>
+                        </div>
+                        <p class="card-disc">Первую версию CRM мы завершили со всеми настройками,остались только доработки,которые появятся в процессе работы.Хочу выразить огромную благодарность intoCRM в особенности, Кириллу за быструю помощь и скурпулёзный подход к каждой проблеме,за помощь в продумывании обходов ограничений битрикса,чтобы процесс срабатывал как нужно под нашу индивидуальную и сложную настройку.За 3 недели мы смогли выстроить фундамент,на который обычно уходит 3 месяца.Именно такой подход к работе Кирилла склонил нас к приобретению Энтерпрайза.</p>
+                    </div>
+                </div>
+                <img src="img/map.png" alt="Карта">
             </section>
         </div>
     </main>
