--- a/index.html
+++ b/index.html
@@ -413,16 +413,61 @@
                     <p>Оставьте заявку и расскажите о проекте
                         в форме или свяжитесь с нами напрямую</p>
                 </div>
-                <div class="wr-form">
-                    <div class="left-form">
-                        
+                <!--<div class="wr-form">
+                    <div class="form-inf">
+                        <form class="left-form">
+                            <input class="bottom" type="text" name="name" placeholder="Как Вас зовут?">
+                            <input class="bottom" type="tel" name="phone" placeholder="Ваш номер телефона">
+                            <div class="checkbox">
+                                <div class="checkbox__elem">
+                                    <input class="call" type="radio" name="soc" value="call" checked="">
+                                    <label for="call">WhatsApp</label>
+                                </div>
+                                <div class="checkbox__elem">
+                                    <input class="call" type="radio" name="soc"  value="call" checked="">
+                                    <label for="call">Telegram</label>
+                                </div>
+                                <div class="checkbox__elem">
+                                    <input class="call" type="radio" name="soc"  value="call" checked="">
+                                    <label for="call">Звонок</label>
+                                </div>
+                            </div>
+                            <button class="btn square width">Отправить</button>
+                        </form>
+                        <div class="details">
+                            <p class="details__text">Адрес<br>
+                            г.Нижний Новгород, ул.Ильинская 119, эт.3<br><br>
+                            © ООО "Интогруп"<br>
+                            ИНН: 5262394440<br>
+                            КПП:526201001</p>
+                        </div>
                     </div>
-                    <div class="right-number"></div>
+                    <div class="right-number">
+                        <div class="el-text">
+                            <p class="details__text">Написать нам на почту</p>
+                            <a href="mailto:into.bitrix24@gmail.com">into.amocrm@gmail.com</a><br>
+                            <a href="mailto:into.bitrix24@yandex.ru">into.bitrix24@yandex.ru</a>
+                        </div>
+                        <div class="el-text">
+                            <p class="details__text">Поговорить с нами по телефону</p>
+                            <a href="tel:+78312312143">+7 (831) 231-21-43</a><br>
+                            <a href:="tel:+79625104914">+7 (962) 510-49-14</a>
+                        </div>
+                        <div class="el-text">
+                            <p class="details__text">Поговорить с нашим аккаунт- менеджером
+                                в Telegram или WhatsApp</p>
+                            <div style="display:flex; gap:20px; max-width:100%">
+                            <a href="https://t.me/intoCRM_bot"><img loading="lazy" src="https://intocrm.ru/images/tg.png" alt="" class="mes" style="width: 100px;" height="100px" ;=""></a>                            <a href="https://wa.me/74992908267?text=Здравствуйте! Номер моей заявки: 1719384152633368355"><img loading="lazy" src="https://intocrm.ru/images/wa.png" alt="" class="mes" style="width: 100px;" height="100px" ;=""></a></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="cont-map">
                     <img src="img/map-bottom.png" alt="Карта">
-                </div>
+                </div>-->
             </div>
         </section>
     </main>
+    <footer>
+
+    </footer>
 </body>
