--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                     <p>Оставьте заявку и расскажите о проекте
                         в форме или свяжитесь с нами напрямую</p>
                 </div>
-                <!--<div class="wr-form">
+                <div class="wr-form">
                     <div class="form-inf">
                         <form class="left-form">
                             <input class="bottom" type="text" name="name" placeholder="Как Вас зовут?">
@@ -463,7 +463,7 @@
                 </div>
                 <div class="cont-map">
                     <img src="img/map-bottom.png" alt="Карта">
-                </div>-->
+                </div>
             </div>
         </section>
     </main>
