--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 </head>
 
 <body>
@@ -115,7 +115,7 @@
                             при минимальных усилиях</h2>
                         <img class="stages-title__arrow" src="img/arrow.png"></img>
                     </div>
-                    <div class="swiper stage">
+                    <div class="swiper optimization">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide card card-st">
                                 <div class="card-top">
@@ -176,10 +176,10 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="swiper-pagination"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
                     </div>
-                    <div class="swiper-pagination"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
                 </section>
             </div>
             <section class="form-crm">
@@ -507,6 +507,8 @@
         </div>
         <p>© 2024 Внедрение CRM систем для вашего бизнеса СЕРТИФИЦИРОВАННЫЙ ПАРТНЕР</p>
     </footer>
+    <script src="js/script.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 </body>
-<script src="js/script.js"></script>
+
 </html>
