--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/media.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 </head>
 
@@ -113,7 +114,7 @@
                         <h2>Оптимизируем работу отдела продаж,
                             чтобы достичь максимальной выручки
                             при минимальных усилиях</h2>
-                        <img class="stages-title__arrow" src="img/arrow.png"></img>
+                        <img class="swiper-button-next stages-title__arrow" src="img/arrow.png"></img>
                     </div>
                     <div class="swiper optimization">
                         <div class="swiper-wrapper">
@@ -177,8 +178,6 @@
                             </div>
                         </div>
                         <div class="swiper-pagination"></div>
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
                     </div>
                 </section>
             </div>
@@ -507,8 +506,9 @@
         </div>
         <p>© 2024 Внедрение CRM систем для вашего бизнеса СЕРТИФИЦИРОВАННЫЙ ПАРТНЕР</p>
     </footer>
-    <script src="js/script.js" type="text/javascript"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="js/script.js" type="text/javascript"></script>
 </body>
 
 </html>
