--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="nav-menu">
                 <a href="">О компании</a>
                 <a href="services.html">Услуги</a>
-                <a href="">Лицензии</a>
+                <a href="sites.html">Лицензии</a>
                 <a href="">Блог</a>
                 <a href="">Кейсы</a>
                 <a href="">Контакты</a>
